language/move-lang/tests/move_check/translated_ir_tests/move/commands/branch_assigns_then_moves.exp
error[E06002]: use of unassigned variable
   ┌─ tests/move_check/translated_ir_tests/move/commands/branch_assigns_then_moves.move:12:12
   │
 7 │         y = move x;
   │             ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
   ·
12 │     assert(x == 5, 42);
   │            ^ Invalid usage of variable 'x'

